--- a/dashboard-owner.html
+++ b/dashboard-owner.html
@@ -1487,7 +1487,7 @@
         function logout() {
             if (confirm('Apakah Anda yakin ingin logout?')) {
                 localStorage.removeItem('isAuthenticated');
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }
         }
 
@@ -1508,3 +1508,4 @@
     </script>
 </body>
 </html>
+
